--- a/client/src/index.css
+++ b/client/src/index.css
@@ -38,7 +38,7 @@ html {
 
 .link {
   color: rgb(255, 255, 255);
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 h1 {
@@ -49,6 +49,14 @@ h1 {
   color: rgb(255, 255, 255);
   background-color: #183446;
   border-radius: 0%;
-  padding: 1rem 3rem;
+  padding: 0.8rem 3rem;
+  text-decoration: none;
+}
+
+.add-btn:hover {
+  color: rgb(255, 255, 255) !important;
+  background-color: #0b3d5f;
+  border-radius: 0%;
+  padding: 0.8rem 3rem;
   text-decoration: none;
 }
